--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/auth_db
-spring.datasource.username=root
-spring.datasource.password=Jimohab@123
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
 spring.jpa.properties.hibernate.storage.engine=MyISAM
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-
